--- a/admin_gudang/rincian_pengeluaran_material.html
+++ b/admin_gudang/rincian_pengeluaran_material.html
@@ -376,7 +376,7 @@
 			<div class="m-stack m-stack--flex-tablet-and-mobile m-stack--ver m-stack--desktop">
 				<div class="m-stack__item m-stack__item--left m-stack__item--middle m-stack__item--last">
 					<span class="m-footer__copyright">
-						Upa'na Studio
+						Upana Studio
 					</span>
 				</div>
 			</div>
