--- a/admin_gudang/master_stock.html
+++ b/admin_gudang/master_stock.html
@@ -412,12 +412,13 @@
 														<th>No</th>
 														<th>Kategori</th>
 														<th>Kode</th>
-														<th>Nama Barang</th>
+														<th>Nama Item</th>
 														<th>Tipe</th>
 														<th>Merek</th>
 														<th>Jumlah</th>
 														<th>Satuan</th>
 														<th>Keterangan</th>
+														<th>Aksi</th>
 													</tr>
 												</thead>
 												<tbody>
@@ -431,6 +432,7 @@
 														<td>20</td>
 														<td>unit</td>
 														<td>-</td>
+														<td>Edit / Hapus </td>
 													</tr>
 													<tr>
 														<td>2</td>
@@ -442,17 +444,20 @@
 														<td>20</td>
 														<td>unit</td>
 														<td>-</td>
+														<td>Edit / Hapus </td>
+														
 													</tr>
 													<tr>
 														<td>3</td>
 														<td>Jasa</td>
-														<td>#14253617</td>
-														<td>Thermistor RKD25GVM</td>
-														<td>Thermistor</td>
+														<td>#J12</td>
+														<td>Cuci AC Dalam</td>
+														<td> - </td>
 														<td>Daikin</td>
-														<td>20</td>
+														<td> - </td>
 														<td>unit</td>
-														<td>-</td>
+														<td> Jasa pekerjaan </td>
+														<td>Edit / Hapus </td>
 													</tr>
 													<tr>
 														<td>4</td>
@@ -464,6 +469,7 @@
 														<td>20</td>
 														<td>unit</td>
 														<td>-</td>
+														<td>Edit / Hapus </td>
 													</tr>
 													<tr>
 														<td>5</td>
@@ -475,6 +481,7 @@
 														<td>20</td>
 														<td>unit</td>
 														<td>-</td>
+														<td>Edit / Hapus </td>
 													</tr>
 												</tbody>
 											</table>
