--- a/admin_gudang/rincian_stock_barang.html
+++ b/admin_gudang/rincian_stock_barang.html
@@ -288,8 +288,18 @@
 											<label  class="col-2 col-form-label">
 												Jenis Barang
 											</label>
-											<div class="col-10">
+											<div class="col-md-5">
 												<input disabled="" class="form-control m-input" type="text" value="AC Split Daikin 2 PK Standar" id="jenis_barang">
+											</div>
+											<div class="col-md-4  ">
+												<div class="m-input-icon m-input-icon--left">
+													<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
+													<span class="m-input-icon__icon m-input-icon__icon--left">
+														<span>
+															<i class="la la-search"></i>
+														</span>
+													</span>
+												</div>
 											</div>
 										</div>
 										<table class="table" id="tbl_rincian_stock">
