--- a/admin_gudang/stock.html
+++ b/admin_gudang/stock.html
@@ -298,7 +298,7 @@
 													<thead>
 														<tr>
 															<th>No</th>
-															<th>Tanggal</th>
+															<th>Last Update</th>
 															<th>Kode</th>
 															<th>Nama Barang</th>
 															<th>Tipe</th>
@@ -394,9 +394,8 @@
 													<thead>
 														<tr>
 															<th>No</th>
-															<th>Tanggal</th>
+															<th>Last Update</th>
 															<th>Kode</th>
-															<th>No Seri</th>
 															<th>Nama Barang</th>
 															<th>Tipe</th>
 															<th>Merek</th>
